samples/_failures_safe/1761632734_1cce43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c83cf535.c: In function ‘main’:
./samples/SAFE/__tmp_c83cf535.c:169:9: error: expected declaration or statement at end of input
  169 |         }
      |         ^
./samples/SAFE/__tmp_c83cf535.c:169:9: error: expected declaration or statement at end of input
